--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,14 @@ edition = "2021"
 anyhow = "1.0.98"
 bytemuck = "1.23.1"
 cargo-wgsl = "0.1.0"
+cgmath = "0.18.0"
 env_logger = "0.11.8"
 log = "0.4.27"
 pollster = "0.4.0"
 wgpu = "25.0"
 winit = "0.30.11"
+
+[dependencies.image]
+version = "0.25.6"
+default-features = false
+features = ["png", "jpeg"]
