--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cgmath = "0.18.0"
 env_logger = "0.11.8"
 log = "0.4.27"
 pollster = "0.4.0"
+rusttype = "0.9.3"
 wgpu = "25.0"
 winit = "0.30.11"
 
