--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ bytemuck = "1.23.1"
 cargo-wgsl = "0.1.0"
 cgmath = "0.18.0"
 env_logger = "0.11.8"
-legion = { version = "0.4.0", features = ["codegen"] }
+legion = { version = "0.4.0", features = ["codegen", "extended-tuple-impls"] }
 log = "0.4.27"
 pollster = "0.4.0"
 rusttype = "0.9.3"
